bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((Math.abs(n-100)<10==true) || (Math.abs(n-200)<10==true)){
  ^