bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if ((Math.abs(n-100)<10==true) || (Math.abs(n-200)<10==true)){
    return true
  }
}